# interview-service

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Taskfile.yaml  compose.yaml  config.py  main.py  pyproject.toml  requirements.txt
src/: main.py
src/adapters/: code_run_service.py
src/adapters/ai_chat/: ai_chat.py  tests.ipynb
src/adapters/ai_chat/ai_utils/: ctrl_parser.py  json_parsers.py  map_enum.py  metric_parsers.py  misc.py  prompt_builders.py  prompt_utils.py  streams.py
src/adapters/ai_chat/prompts/: chat_welcome_prompt.txt  create_chat_plan_prompt.txt  create_task_prompt.txt  response_system_prompt.txt
src/adapters/ai_chat/prompts/system/: chat_welcome_system_prompt.txt  check_solution_system_prompt.txt  create_chat_plan_system_prompt.txt  create_task_system_prompt.txt  create_test_suite_system_prompt.txt  metrics_block2_system_prompt.txt  metrics_block3_system_prompt.txt  response_system_prompt.txt  stream_task_system_prompt.txt
src/adapters/ai_chat/prompts/user/: chat_welcome_prompt.txt  check_solution_prompt.txt  create_chat_plan_prompt.txt  create_task_prompt.txt  create_test_suite_prompt.txt  metrics_block2_prompt.txt  metrics_block3_prompt.txt  response_prompt.txt
src/adapters/vacancy_service/: mock.py  vacancy_service.py
src/core/: setting.py
src/dependencies/: main.py
src/dependencies/services/: __init__.py  interview_service_factory.py
src/domain/message/: message.py
src/domain/metrics/: metrics.py
src/domain/room/: room.py
src/domain/task/: task.py
src/domain/test/: run_result.py  test.py
src/domain/vacancy/: vacancy.py
src/presentation/fast_api/middlewares/: jwt.py
src/presentation/fast_api/v1/interview/: interview.py
src/schemas/: interiewee.py  room.py
src/usecases/interfaces/: ai-chat.py  ai_chat.py  code_run_service.py  interview_service.py  vacancy_service.py
src/usecases/interview_service/: service.py
