[project]
name = "interview-service"
version = "0.1.0"
description = "Interview Service manage room interview sessions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography==46.0.3",
    "fastapi[all]==0.122.0",
    "loguru==0.7.3",
    "python-jose[cryptography]==3.5.0",
    "dotenv==0.9.9",
    "openai==2.8.1",
    "pip==25.3",
    "pydantic-settings==2.12.0",
    "aiohttp>=3.13.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "click==8.3.1",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi-cli==0.0.16",
    "fastapi-cloud-cli==0.5.2",
    "fastar==0.7.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "orjson==3.11.4",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.10.6",
    "pygments==2.19.2",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "rich-toolkit==0.16.0",
    "rignore==0.7.6",
    "rsa==4.9.1",
    "sentry-sdk==2.46.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.50.0",
    "tqdm==4.67.1",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "ujson==5.11.0",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]
